--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,16 @@
 
-body, html {
+body{
 	/* background-color: #f1efe7; */
 	margin: 0;
-	padding: 0;
+	padding: 0px;
 	height: 100%;
+	width: 100%;
+}
+
+#chat {
+	display: block;
+	height: 700px;
+	width: 1100px;
+	border: 1px solid black;
 }
 
